@@ -4,11 +4,9 @@ import random
 import struct
 from unittest import mock
 from aiohttp import Message, WebSocketError
-from aiohttp import _ws_impl, MsgType
+from aiohttp import _ws_impl, WSMsgType, WSCloseCode
 from aiohttp._ws_impl import (PACK_LEN1, PACK_LEN2, PACK_LEN3,
                               PACK_CLOSE_CODE,
-                              CLOSE_PROTOCOL_ERROR,
-                              CLOSE_INVALID_TEXT,
                               _websocket_mask,
                               WebSocketParser, parse_frame)
 
@@ -52,7 +50,7 @@ def build_close_frame(code=1000, message=b'', noheader=False):
         message = message.encode('utf-8')
     return build_frame(
         PACK_CLOSE_CODE(code) + message,
-        opcode=MsgType.close, noheader=noheader)
+        opcode=WSMsgType.close, noheader=noheader)
 
 
 @pytest.fixture()
@@ -170,33 +168,33 @@ def test_parse_frame_header_payload_size(buf):
 def test_ping_frame(out, parser):
     def parse_frame(buf):
         yield
-        return (1, MsgType.ping, b'data')
+        return (1, WSMsgType.ping, b'data')
 
     with mock.patch('aiohttp._ws_impl.parse_frame') as m_parse_frame:
         m_parse_frame.side_effect = parse_frame
         next(parser)
         parser.send(b'')
     res = out._buffer[0]
-    assert res == ((MsgType.ping, b'data', ''), 4)
+    assert res == ((WSMsgType.ping, b'data', ''), 4)
 
 
 def test_pong_frame(out, parser):
     def parse_frame(buf):
         yield
-        return (1, MsgType.pong, b'data')
+        return (1, WSMsgType.pong, b'data')
 
     with mock.patch('aiohttp._ws_impl.parse_frame') as m_parse_frame:
         m_parse_frame.side_effect = parse_frame
         next(parser)
         parser.send(b'')
     res = out._buffer[0]
-    assert res == ((MsgType.pong, b'data', ''), 4)
+    assert res == ((WSMsgType.pong, b'data', ''), 4)
 
 
 def test_close_frame(out, parser):
     def parse_frame(buf):
         yield
-        return (1, MsgType.close, b'')
+        return (1, WSMsgType.close, b'')
 
     with mock.patch('aiohttp._ws_impl.parse_frame') as m_parse_frame:
         m_parse_frame.side_effect = parse_frame
@@ -204,26 +202,26 @@ def test_close_frame(out, parser):
         parser.send(b'')
 
     res = out._buffer[0]
-    assert res == ((MsgType.close, 0, ''), 0)
+    assert res == ((WSMsgType.close, 0, ''), 0)
 
 
 def test_close_frame_info(out, parser):
     def parse_frame(buf):
         yield
-        return (1, MsgType.close, b'0112345')
+        return (1, WSMsgType.close, b'0112345')
 
     with mock.patch('aiohttp._ws_impl.parse_frame') as m_parse_frame:
         m_parse_frame.side_effect = parse_frame
         next(parser)
         parser.send(b'')
     res = out._buffer[0]
-    assert res == (Message(MsgType.close, 12337, '12345'), 0)
+    assert res == (Message(WSMsgType.close, 12337, '12345'), 0)
 
 
 def test_close_frame_invalid(out, parser):
     def parse_frame(buf):
         yield
-        return (1, MsgType.close, b'1')
+        return (1, WSMsgType.close, b'1')
 
     with mock.patch('aiohttp._ws_impl.parse_frame') as m_parse_frame:
         m_parse_frame.side_effect = parse_frame
@@ -231,7 +229,7 @@ def test_close_frame_invalid(out, parser):
         with pytest.raises(WebSocketError) as ctx:
             next(parser)
 
-        assert ctx.value.code == CLOSE_PROTOCOL_ERROR
+        assert ctx.value.code == WSCloseCode.protocol_error
 
 
 def test_close_frame_invalid_2(buf, parser):
@@ -239,7 +237,7 @@ def test_close_frame_invalid_2(buf, parser):
     with pytest.raises(WebSocketError) as ctx:
         next(parser)
 
-    assert ctx.value.code == CLOSE_PROTOCOL_ERROR
+    assert ctx.value.code == WSCloseCode.protocol_error
 
 
 def test_close_frame_unicode_err(buf, parser):
@@ -248,13 +246,13 @@ def test_close_frame_unicode_err(buf, parser):
     with pytest.raises(WebSocketError) as ctx:
         next(parser)
 
-    assert ctx.value.code == CLOSE_INVALID_TEXT
+    assert ctx.value.code == WSCloseCode.invalid_text
 
 
 def test_unknown_frame(out, parser):
     def parse_frame(buf):
         yield
-        return (1, MsgType.continuation, b'')
+        return (1, WSMsgType.continuation, b'')
 
     with mock.patch('aiohttp._ws_impl.parse_frame') as m_parse_frame:
         m_parse_frame.side_effect = parse_frame
@@ -265,32 +263,32 @@ def test_unknown_frame(out, parser):
 
 
 def test_simple_text(buf, out, parser):
-    buf.extend(build_frame(b'text', MsgType.text))
+    buf.extend(build_frame(b'text', WSMsgType.text))
     next(parser)
     parser.send(b'')
     res = out._buffer[0]
-    assert res == ((MsgType.text, 'text', ''), 4)
+    assert res == ((WSMsgType.text, 'text', ''), 4)
 
 
 def test_simple_text_unicode_err(buf, parser):
     buf.extend(
-        build_frame(b'\xf4\x90\x80\x80', MsgType.text))
+        build_frame(b'\xf4\x90\x80\x80', WSMsgType.text))
     with pytest.raises(WebSocketError) as ctx:
         next(parser)
 
-    assert ctx.value.code == CLOSE_INVALID_TEXT
+    assert ctx.value.code == WSCloseCode.invalid_text
 
 
 def test_simple_binary(out, parser):
     def parse_frame(buf):
         yield
-        return (1, MsgType.binary, b'binary')
+        return (1, WSMsgType.binary, b'binary')
     with mock.patch('aiohttp._ws_impl.parse_frame') as m_parse_frame:
         m_parse_frame.side_effect = parse_frame
         next(parser)
         parser.send(b'')
     res = out._buffer[0]
-    assert res == ((MsgType.binary, b'binary', ''), 6)
+    assert res == ((WSMsgType.binary, b'binary', ''), 6)
 
 
 def test_continuation(out, parser):
@@ -301,9 +299,9 @@ def test_continuation(out, parser):
         yield
         if cur == 0:
             cur = 1
-            return (0, MsgType.text, b'line1')
+            return (0, WSMsgType.text, b'line1')
         else:
-            return (1, MsgType.continuation, b'line2')
+            return (1, WSMsgType.continuation, b'line2')
 
     with mock.patch('aiohttp._ws_impl.parse_frame') as m_parse_frame:
         m_parse_frame.side_effect = parse_frame
@@ -311,14 +309,14 @@ def test_continuation(out, parser):
         parser.send(b'')
         parser.send(b'')
     res = out._buffer[0]
-    assert res == (Message(MsgType.text, 'line1line2', ''), 10)
+    assert res == (Message(WSMsgType.text, 'line1line2', ''), 10)
 
 
 def test_continuation_with_ping(out, parser):
     frames = [
-        (0, MsgType.text, b'line1'),
-        (0, MsgType.ping, b''),
-        (1, MsgType.continuation, b'line2'),
+        (0, WSMsgType.text, b'line1'),
+        (0, WSMsgType.ping, b''),
+        (1, WSMsgType.continuation, b'line2'),
     ]
 
     def parse_frame(buf, cont=False):
@@ -332,9 +330,9 @@ def test_continuation_with_ping(out, parser):
         parser.send(b'')
         parser.send(b'')
     res = out._buffer[0]
-    assert res == (Message(MsgType.ping, b'', ''), 0)
+    assert res == (Message(WSMsgType.ping, b'', ''), 0)
     res = out._buffer[1]
-    assert res == (Message(MsgType.text, 'line1line2', ''), 10)
+    assert res == (Message(WSMsgType.text, 'line1line2', ''), 10)
 
 
 def test_continuation_err(out, parser):
@@ -345,9 +343,9 @@ def test_continuation_err(out, parser):
         yield
         if cur == 0:
             cur = 1
-            return (0, MsgType.text, b'line1')
+            return (0, WSMsgType.text, b'line1')
         else:
-            return (1, MsgType.text, b'line2')
+            return (1, WSMsgType.text, b'line2')
 
     with mock.patch('aiohttp._ws_impl.parse_frame') as m_parse_frame:
         m_parse_frame.side_effect = parse_frame
@@ -359,10 +357,10 @@ def test_continuation_err(out, parser):
 
 def test_continuation_with_close(out, parser):
     frames = [
-        (0, MsgType.text, b'line1'),
-        (0, MsgType.close,
+        (0, WSMsgType.text, b'line1'),
+        (0, WSMsgType.close,
          build_close_frame(1002, b'test', noheader=True)),
-        (1, MsgType.continuation, b'line2'),
+        (1, WSMsgType.continuation, b'line2'),
     ]
 
     def parse_frame(buf, cont=False):
@@ -376,17 +374,17 @@ def test_continuation_with_close(out, parser):
         parser.send(b'')
         parser.send(b'')
         res = out._buffer[0]
-    assert res, (Message(MsgType.close, 1002, 'test'), 0)
+    assert res, (Message(WSMsgType.close, 1002, 'test'), 0)
     res = out._buffer[1]
-    assert res == (Message(MsgType.text, 'line1line2', ''), 10)
+    assert res == (Message(WSMsgType.text, 'line1line2', ''), 10)
 
 
 def test_continuation_with_close_unicode_err(out, parser):
     frames = [
-        (0, MsgType.text, b'line1'),
-        (0, MsgType.close,
+        (0, WSMsgType.text, b'line1'),
+        (0, WSMsgType.close,
          build_close_frame(1000, b'\xf4\x90\x80\x80', noheader=True)),
-        (1, MsgType.continuation, b'line2')]
+        (1, WSMsgType.continuation, b'line2')]
 
     def parse_frame(buf, cont=False):
         yield
@@ -399,15 +397,15 @@ def test_continuation_with_close_unicode_err(out, parser):
         with pytest.raises(WebSocketError) as ctx:
             parser.send(b'')
 
-    assert ctx.value.code == CLOSE_INVALID_TEXT
+    assert ctx.value.code == WSCloseCode.invalid_text
 
 
 def test_continuation_with_close_bad_code(out, parser):
     frames = [
-        (0, MsgType.text, b'line1'),
-        (0, MsgType.close,
+        (0, WSMsgType.text, b'line1'),
+        (0, WSMsgType.close,
          build_close_frame(1, b'test', noheader=True)),
-        (1, MsgType.continuation, b'line2')]
+        (1, WSMsgType.continuation, b'line2')]
 
     def parse_frame(buf, cont=False):
         yield
@@ -420,14 +418,14 @@ def test_continuation_with_close_bad_code(out, parser):
         with pytest.raises(WebSocketError) as ctx:
             parser.send(b'')
 
-        assert ctx.value.code == CLOSE_PROTOCOL_ERROR
+        assert ctx.value.code == WSCloseCode.protocol_error
 
 
 def test_continuation_with_close_bad_payload(out, parser):
     frames = [
-        (0, MsgType.text, b'line1'),
-        (0, MsgType.close, b'1'),
-        (1, MsgType.continuation, b'line2')]
+        (0, WSMsgType.text, b'line1'),
+        (0, WSMsgType.close, b'1'),
+        (1, WSMsgType.continuation, b'line2')]
 
     def parse_frame(buf, cont=False):
         yield
@@ -440,14 +438,14 @@ def test_continuation_with_close_bad_payload(out, parser):
         with pytest.raises(WebSocketError) as ctx:
             parser.send(b'')
 
-        assert ctx.value.code, CLOSE_PROTOCOL_ERROR
+        assert ctx.value.code, WSCloseCode.protocolError
 
 
 def test_continuation_with_close_empty(out, parser):
     frames = [
-        (0, MsgType.text, b'line1'),
-        (0, MsgType.close, b''),
-        (1, MsgType.continuation, b'line2'),
+        (0, WSMsgType.text, b'line1'),
+        (0, WSMsgType.close, b''),
+        (1, WSMsgType.continuation, b'line2'),
     ]
 
     def parse_frame(buf, cont=False):
@@ -462,9 +460,9 @@ def test_continuation_with_close_empty(out, parser):
         parser.send(b'')
 
     res = out._buffer[0]
-    assert res, (Message(MsgType.close, 0, ''), 0)
+    assert res, (Message(WSMsgType.close, 0, ''), 0)
     res = out._buffer[1]
-    assert res == (Message(MsgType.text, 'line1line2', ''), 10)
+    assert res == (Message(WSMsgType.text, 'line1line2', ''), 10)
 
 
 websocket_mask_data = bytearray(
