@@ -45,6 +45,8 @@ CHANGES
 
 - Rename aiohttp.MsgType tp aiohttp.WSMsgType
 
+- Introduce aiohttp.WSMessage officially
+
 0.22.3 (07-26-2016)
 -------------------
 
